--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   syncfusion_flutter_gauges: ^20.3.50
   mqtt_client: ^9.7.2
+  typed_data: ^1.3.1
 
 dev_dependencies:
   flutter_test:
