--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   syncfusion_flutter_gauges: ^20.3.50
   mqtt_client: ^9.7.2
   typed_data: ^1.3.1
+  firebase_core: ^2.1.1
+  firebase_database: ^10.0.3
 
 dev_dependencies:
   flutter_test:
